--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sadhana Tracker</title>
+  <title>Sadhana Tracker – Stability Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: Arial;
       background: #000080;
       min-height: 100vh;
       display: flex;
@@ -24,9 +22,9 @@
       color: #000080;
       padding: 25px;
       border-radius: 12px;
-      width: 420px;
+      width: 400px;
     }
-    h3 { text-align:center; }
+    h3 { text-align: center; }
     input, select {
       width: 100%;
       padding: 8px;
@@ -35,32 +33,19 @@
     button {
       width: 100%;
       padding: 10px;
+      margin-top: 10px;
       background: #000080;
       color: white;
       border: none;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    .secondary {
-      background: #f2f2f2;
-      color: #000080;
-    }
-    .muted {
-      font-size: 13px;
-      color: #555;
-      text-align:center;
-    }
-    .danger {
-      color: red;
-      font-size: 14px;
-      text-align:center;
     }
   </style>
 </head>
 
 <body>
 
-<div class="card" id="loading">Checking session…</div>
+<div class="card" id="loading">
+  Checking session…
+</div>
 
 <div class="card" id="auth" style="display:none;">
   <h3>🙏 Sadhana Tracker</h3>
@@ -68,139 +53,70 @@
   <input id="password" type="password" placeholder="Password" />
   <button onclick="login()">Login</button>
   <button onclick="signup()">Sign Up</button>
-  <p id="msg" class="danger"></p>
+  <p id="msg" style="color:red;"></p>
 </div>
 
 <div class="card" id="sadhana" style="display:none;">
   <h3>Daily Sadhana</h3>
 
-  <label>Date</label>
-  <select id="dateSelect"></select>
-
   <label>Sleep Time</label>
-  <input type="time" id="sleepTime" />
+  <input type="time" />
 
-  <label>Wake-up Time</label>
-  <input type="time" id="wakeTime" />
+  <label>Wake Time</label>
+  <input type="time" />
 
   <label>Chanting Completion Time</label>
-  <input type="time" id="chantingTime" />
+  <input type="time" />
 
-  <label>Reading Duration (minutes)</label>
-  <input type="number" id="reading" />
+  <label>Reading (minutes)</label>
+  <input type="number" />
 
-  <label>Hearing Hari Katha (minutes)</label>
-  <input type="number" id="hearing" />
+  <label>Hearing (minutes)</label>
+  <input type="number" />
 
   <label>Day Sleep (minutes)</label>
-  <input type="number" id="daySleep" />
+  <input type="number" />
 
-  <button onclick="saveSadhana()">Save Sadhana</button>
-  <button class="secondary" onclick="logout()">Logout</button>
-
-  <p id="status" class="muted"></p>
+  <button onclick="logout()">Logout</button>
 </div>
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
-  authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
-  projectId: "sadhana-tracker-b65ff",
-  appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
-};
+  const firebaseConfig = {
+    apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
+    authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
+    projectId: "sadhana-tracker-b65ff",
+    appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
+  };
 
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
 
-const ADMIN_EMAIL = "riyagupta9872@gmail.com";
-let maxBackdateDays = 2;
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      show("sadhana");
+    } else {
+      show("auth");
+    }
+  });
 
-auth.onAuthStateChanged(async user => {
-  if (!user) {
-    show("auth");
-    return;
+  function login() {
+    auth.signInWithEmailAndPassword(email.value, password.value)
+      .catch(e => msg.innerText = e.message);
   }
 
-  const userRef = db.collection("users").doc(user.uid);
-  const doc = await userRef.get();
-  if (!doc.exists) {
-    await userRef.set({
-      email: user.email,
-      role: user.email === ADMIN_EMAIL ? "admin" : "user"
-    });
+  function signup() {
+    auth.createUserWithEmailAndPassword(email.value, password.value)
+      .catch(e => msg.innerText = e.message);
   }
 
-  await loadSettings();
-  setupDateOptions();
-  show("sadhana");
-});
-
-async function loadSettings() {
-  const ref = db.collection("settings").doc("appConfig");
-  const doc = await ref.get();
-  if (!doc.exists) {
-    await ref.set({ backdateEnabled: true, maxBackdateDays: 2 });
-    maxBackdateDays = 2;
-  } else {
-    maxBackdateDays = doc.data().maxBackdateDays;
+  function logout() {
+    auth.signOut();
   }
-}
 
-function setupDateOptions() {
-  const sel = document.getElementById("dateSelect");
-  sel.innerHTML = "";
-  const today = new Date();
-
-  for (let i = 0; i <= maxBackdateDays; i++) {
-    const d = new Date(today);
-    d.setDate(today.getDate() - i);
-    const key = d.toISOString().slice(0,10);
-    const opt = document.createElement("option");
-    opt.value = key;
-    opt.text = key;
-    sel.appendChild(opt);
+  function show(id) {
+    loading.style.display = auth.style.display = sadhana.style.display = "none";
+    document.getElementById(id).style.display = "block";
   }
-}
-
-async function saveSadhana() {
-  const uid = auth.currentUser.uid;
-  const date = dateSelect.value;
-
-  await db.collection("users")
-    .doc(uid)
-    .collection("sadhana")
-    .doc(date)
-    .set({
-      sleepTime: sleepTime.value,
-      wakeTime: wakeTime.value,
-      chantingTime: chantingTime.value,
-      reading: reading.value,
-      hearing: hearing.value,
-      daySleep: daySleep.value,
-      status: "filled",
-      createdAt: firebase.firestore.FieldValue.serverTimestamp()
-    });
-
-  status.innerText = "Sadhana saved 🙏";
-}
-
-function login() {
-  auth.signInWithEmailAndPassword(email.value, password.value)
-    .catch(e => msg.innerText = e.message);
-}
-function signup() {
-  auth.createUserWithEmailAndPassword(email.value, password.value)
-    .catch(e => msg.innerText = e.message);
-}
-function logout() {
-  auth.signOut();
-}
-
-function show(id) {
-  loading.style.display = auth.style.display = sadhana.style.display = "none";
-  document.getElementById(id).style.display = "block";
-}
 </script>
 
 </body>
