--- a/index.html
+++ b/index.html
@@ -6,50 +6,29 @@
 
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #000080;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin: 0; font-family: Arial, sans-serif;
+      background: #000080; min-height: 100vh;
+      display: flex; justify-content: center; align-items: center;
     }
     .card {
-      background: white;
-      color: #000080;
-      padding: 25px;
-      border-radius: 12px;
-      width: 420px;
+      background: white; color: #000080;
+      padding: 25px; border-radius: 12px; width: 420px;
     }
     h3 { text-align: center; }
     label { font-size: 14px; display: block; margin-top: 10px; }
     input, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 6px;
+      width: 100%; padding: 8px; margin-top: 6px;
     }
     button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 12px;
-      background: #000080;
-      color: white;
-      border: none;
-      cursor: pointer;
+      width: 100%; padding: 10px; margin-top: 12px;
+      background: #000080; color: white; border: none; cursor: pointer;
     }
-    .secondary {
-      background: #f2f2f2;
-      color: #000080;
-    }
-    .msg {
-      text-align: center;
-      font-size: 14px;
-      margin-top: 10px;
-      color: green;
-    }
+    .secondary { background: #f2f2f2; color: #000080; }
+    .msg { text-align: center; font-size: 14px; margin-top: 10px; color: green; }
     .err { color: red; }
   </style>
 </head>
@@ -120,6 +99,7 @@
 
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
+  const db = firebase.firestore();
 
   const loadingEl = document.getElementById("loading");
   const authEl = document.getElementById("auth");
@@ -131,22 +111,21 @@
 
   let currentUserId = null;
 
-  auth.onAuthStateChanged(user => {
+  auth.onAuthStateChanged(async user => {
     if (!user) {
-      show("auth");
-      return;
+      show("auth"); return;
     }
     currentUserId = user.uid;
-
-    const key = "chantingCategory_" + currentUserId;
-    const savedCategory = localStorage.getItem(key);
-
     setupAllowedDates();
 
-    if (!savedCategory) {
+    const userRef = db.collection("users").doc(currentUserId);
+    const snap = await userRef.get();
+
+    if (!snap.exists || !snap.data().chantingCategory) {
       show("category");
     } else {
       show("sadhana");
+      preloadSadhana();
     }
   });
 
@@ -154,24 +133,22 @@
     auth.signInWithEmailAndPassword(email.value, password.value)
       .catch(e => authMsgEl.innerText = e.message);
   }
-
   function signup() {
     auth.createUserWithEmailAndPassword(email.value, password.value)
       .catch(e => authMsgEl.innerText = e.message);
   }
 
-  function saveCategory() {
+  async function saveCategory() {
     const value = categorySelect.value;
-    if (!value) {
-      catMsgEl.innerText = "Please select a category";
-      return;
-    }
-    localStorage.setItem("chantingCategory_" + currentUserId, value);
+    if (!value) { catMsgEl.innerText = "Please select a category"; return; }
+    await db.collection("users").doc(currentUserId).set({
+      chantingCategory: value,
+      updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+    }, { merge: true });
     show("sadhana");
   }
 
   function changeCategory() {
-    localStorage.removeItem("chantingCategory_" + currentUserId);
     show("category");
   }
 
@@ -179,32 +156,57 @@
     const sel = document.getElementById("dateSelect");
     sel.innerHTML = "";
     const today = new Date();
-
     for (let i = 0; i <= 2; i++) {
       const d = new Date(today);
       d.setDate(today.getDate() - i);
       const key = d.toISOString().slice(0, 10);
       const opt = document.createElement("option");
-      opt.value = key;
-      opt.text = key;
+      opt.value = key; opt.text = key;
       sel.appendChild(opt);
     }
   }
 
-  function submitSadhana() {
+  async function preloadSadhana() {
+    const date = document.getElementById("dateSelect").value;
+    const ref = db.collection("users").doc(currentUserId)
+      .collection("sadhana").doc(date);
+    const snap = await ref.get();
+    if (!snap.exists) return;
+    const d = snap.data();
+    sleepTime.value = d.sleepTime || "";
+    wakeTime.value = d.wakeTime || "";
+    chantingTime.value = d.chantingTime || "";
+    reading.value = d.reading || "";
+    hearing.value = d.hearing || "";
+    daySleep.value = d.daySleep || "";
+  }
+
+  document.getElementById("dateSelect").addEventListener("change", preloadSadhana);
+
+  async function submitSadhana() {
+    const date = document.getElementById("dateSelect").value;
+    await db.collection("users").doc(currentUserId)
+      .collection("sadhana").doc(date).set({
+        date,
+        sleepTime: sleepTime.value,
+        wakeTime: wakeTime.value,
+        chantingTime: chantingTime.value,
+        reading: reading.value,
+        hearing: hearing.value,
+        daySleep: daySleep.value,
+        updatedAt: firebase.firestore.FieldValue.serverTimestamp(),
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      }, { merge: true });
     successMsgEl.innerText = "Sadhana submitted 🙏";
   }
 
-  function logout() {
-    auth.signOut();
-  }
+  function logout() { auth.signOut(); }
 
   function show(screen) {
     loadingEl.style.display = "none";
     authEl.style.display = "none";
     categoryEl.style.display = "none";
     sadhanaEl.style.display = "none";
-
     if (screen === "auth") authEl.style.display = "block";
     if (screen === "category") categoryEl.style.display = "block";
     if (screen === "sadhana") sadhanaEl.style.display = "block";
